--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,5 +259,7 @@
     <string name="enter_message">Enter message</string>
     <string name="message_is_sent">Message is sent.</string>
     <string name="enter_correct_email">Enter correct email.</string>
+    <string name="select_program">Select Program</string>
+    <string name="program">Program</string>
 
 </resources>
