Implemented selecting programs when registering another worker. Implemented displaing the selected programs on my profile.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,5 +261,7 @@
     <string name="enter_correct_email">Enter correct email.</string>
     <string name="select_program">Select Program</string>
     <string name="program">Program</string>
+    <string name="programs_dot">Programs:</string>
+    <string name="select">Select</string>
 
 </resources>
