--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,8 +215,8 @@
     <string name="question_content_3">Xaba targets employees/workers and employers in the blue-collar market specializing in Agri-business, Construction, Hospitality and Manufacturing industries.
         \n\u2022 Employees/Workers can register to increase their chances of getting hired
         \n\u2022 Employers can find verified workers with the right skillset for their projects</string>
-    <string name="question_content_4">Employees/Workers are able to register for free by dialling *884# and completing the registration process.  By registering, your details can be viewed by different employers increasing your chances for future job opportunities.\n\n
-        Employee/Worker Registration Steps:\n
+    <string name="question_content_4"><b>Employees/Workers</b> are able to register for free by dialling <b>*884#</b> and completing the registration process.  By registering, your details can be viewed by different employers increasing your chances for future job opportunities.\n\n
+        <b><u>Employee/Worker Registration Steps:</u></b>\n
         a. Dial *884#\n
         b. Enter ID\n
         c. Confirm ID\n
@@ -229,7 +229,7 @@
         j. Insert your preferred number to receive job alerts.\n
         k. Receive registration confirmation SMS with your PIN\n\n
         You can also register using our Xaba Agent App. Simply download the app, click ‘register now’ on the main page and follow the steps.\n\n
-        Employer Registration Steps\n
+        <b><u>Employer Registration Steps</u></b>\n
         a. Register on www.xaba.org\n
         b. Create an account by filling in the Company Registration Form\n
         c. Activate your account by clicking link sent to your e-mail address\n
@@ -241,36 +241,36 @@
         i. Invite them for job interview\n
         j. Hire selected workers</string>
     <string name="question_content_5">a. Registration and receiving notifications on Xaba Shikanisha is free for workers\n b. Normal network charges apply.</string>
-    <string name="question_content_6">a. On the App:\n i. Simply put the activation code sent to your notification number and click ‘verify’ to proceed.</string>
-    <string name="question_content_7">a. On USSD:\n i. Dial *884#\n
+    <string name="question_content_6"><b>a. On the App:</b>\n i. Simply put the activation code sent to your notification number and click ‘verify’ to proceed.</string>
+    <string name="question_content_7"><b>a. On USSD:</b>\n i. Dial *884#\n
         ii. Enter ID\n
         iii. Confirm ID\n
         iv. Enter PIN\n
         v. Select (1) Update Profile (for either PIN, Location, Language)\n
-        b. On the App:\n
+        <b>b. On the App:</b>\n
         i. Login to your account.\n
         ii. Click the Menu icon\n
         iii. Select My Profile\n
         iv. Click Edit Profile</string>
-    <string name="question_content_8">a. On USSD:\n
+    <string name="question_content_8"><b>a. On USSD:</b>\n
         i. Dial *884#\n
         ii. Enter ID\n
         iii. Confirm ID\n
         iv. Enter PIN\n
         v. Choose (2) View Profile on the menu</string>
-    <string name="question_content_9">a. On USSD:\n
+    <string name="question_content_9"><b>a. On USSD:</b>\n
         i. Dial *884#\n
         ii. Enter ID\n
         iii. Confirm ID\n
         iv. Enter PIN\n
         v. Choose (3) Change Notification Number on the menu</string>
-    <string name="question_content_10">a. On USSD:\n
+    <string name="question_content_10"><b>a. On USSD:</b>\n
         i. Dial *884#\n
         ii. Enter ID\n
         iii. Confirm ID\n
         iv. Enter PIN\n
         v. Choose (4) Refer a Friend on the menu</string>
-    <string name="question_content_11">a. On USSD:\n
+    <string name="question_content_11"><b>a. On USSD:</b>\n
         i. Dial *884#\n
         ii. Enter ID\n
         iii. Confirm ID\n
