save slected state on professions dialog and enable deselection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,5 +321,6 @@
     <string name="program">Program</string>
     <string name="programs_dot">Programs:</string>
     <string name="select">Select</string>
+    <string name="registered">Registered</string>
 
 </resources>
