fix sms Matcher

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,6 +309,7 @@
 
     <!--Validation by SMS-->
     <string name="verification_code">Verification code</string>
+    <string name="sms_activation_code">Activation code</string>
 
     <!--Commission log filter-->
     <string name="date">Date</string>
