--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,75 +217,18 @@
     <string name="question_content_1">Xaba is a social movement that is enriching lives by creating job connections in Agri-business, Construction, Hospitality and Manufacturing industries. Searching and hiring workers in the informal sector is now easier on Xaba.</string>
     <string name="question_content_2">Xaba Shikanisha is an easy, cost effective and faster way to connect employers with employees. Employers are able to cherry pick blue-collar workers best suited for their projects in a matter of minutes and in simplified steps. Employees/Workers who are registered on Xaba Shikanisha through the USSD process *844# increase their opportunity of getting hired for jobs closest to them.</string>
     <string name="question_content_3">Xaba targets employees/workers and employers in the blue-collar market specializing in Agri-business, Construction, Hospitality and Manufacturing industries.
-        \n \u2022 Employees/Workers can register to increase their chances of getting hired
-        \n \u2022 Employers can find verified workers with the right skillset for their projects</string>
-    <string name="question_content_4"><b>Employees/Workers</b> are able to register for free by dialling <b>*884#</b> and completing the registration process.  By registering, your details can be viewed by different employers increasing your chances for future job opportunities.\n\n
-        <b><u>Employee/Worker Registration Steps:</u></b>\n
-        a. Dial *884#\n
-        b. Enter ID\n
-        c. Confirm ID\n
-        d. Select language\n
-        e. Select industry\n
-        f. Select the first letter of your profession category e.g. A-R or S-Z\n
-        g. Choose specific profession\n
-        h. Select county of residence\n
-        i. Enter an agent ID or number of person who referred you or enter 00 to skip\n
-        j. Insert your preferred number to receive job alerts.\n
-        k. Receive registration confirmation SMS with your PIN\n\n
-        You can also register using our Xaba Agent App. Simply download the app, click ‘register now’ on the main page and follow the steps.\n\n
-        <b><u>Employer Registration Steps</u></b>\n
-        a. Register on www.xaba.org\n
-        b. Create an account by filling in the Company Registration Form\n
-        c. Activate your account by clicking link sent to your e-mail address\n
-        d. Log-in to your account\n
-        e. Access the dashboard and add new projects/review reports\n
-        f. Start shortlisting workers\n
-        g. Send notification to shortlisted workers\n
-        h. Send job details to workers who’ve responded\n
-        i. Invite them for job interview\n
-        j. Hire selected workers</string>
-    <string name="question_content_5">a. Registration and receiving notifications on Xaba Shikanisha is free for workers\nb. Normal network charges apply.</string>
-    <string name="question_content_6"><b>a. On the App:</b>\n i. Simply put the activation code sent to your notification number and click ‘verify’ to proceed.</string>
-    <string name="question_content_7"><b>a. On USSD:</b>\n i. Dial *884#\n
-        ii. Enter ID\n
-        iii. Confirm ID\n
-        iv. Enter PIN\n
-        v. Select (1) Update Profile (for either PIN, Location, Language)\n
-        <b>b. On the App:</b>\n
-        i. Login to your account.\n
-        ii. Click the Menu icon\n
-        iii. Select My Profile\n
-        iv. Click Edit Profile</string>
-    <string name="question_content_8"><b>a. On USSD:</b>\n
-        i. Dial *884#\n
-        ii. Enter ID\n
-        iii. Confirm ID\n
-        iv. Enter PIN\n
-        v. Choose (2) View Profile on the menu</string>
-    <string name="question_content_9"><b>a. On USSD:</b>\n
-        i. Dial *884#\n
-        ii. Enter ID\n
-        iii. Confirm ID\n
-        iv. Enter PIN\n
-        v. Choose (3) Change Notification Number on the menu</string>
-    <string name="question_content_10"><b>a. On USSD:</b>\n
-        i. Dial *884#\n
-        ii. Enter ID\n
-        iii. Confirm ID\n
-        iv. Enter PIN\n
-        v. Choose (4) Refer a Friend on the menu</string>
-    <string name="question_content_11"><b>a. On USSD:</b>\n
-        i. Dial *884#\n
-        ii. Enter ID\n
-        iii. Confirm ID\n
-        iv. Enter PIN\n
-        v. Choose (5) Add Profession on the menu</string>
-    <string name="question_content_12">a. Download the Xaba Agent App on the Google Play Store or Apple App Store\n
-        b. Register as an Agent\n
-        c. Choose Become Agent on menu\n
-        d. Enter your details and submit\n
-        e. If successful, receive a notification to become an agent\n
-        f. Start earning your commission.</string>
+        \n\t\u2022 Employees/Workers can register to increase their chances of getting hired
+        \n\t\u2022 Employers can find verified workers with the right skillset for their projects</string>
+    <string name="question_content_4"><b>Employees/Workers</b> are able to register for free by dialling <b>*884#</b> and completing the registration process.  By registering, your details can be viewed by different employers increasing your chances for future job opportunities.\n\n<b><u>Employee/Worker Registration Steps:</u></b>\n\t\ta. Dial *884#\n\t\tb. Enter ID\n\t\tc. Confirm ID\n\t\td. Select language\n\t\te. Select industry\n\t\tf. Select the first letter of your profession category e.g. A-R or S-Z\n\t\tg. Choose specific profession\n\t\th. Select county of residence\n\t\ti. Enter an agent ID or number of person who referred you or enter 00 to skip\n\t\tj. Insert your preferred number to receive job alerts.\n\t\tk. Receive registration confirmation SMS with your PIN\n\nYou can also register using our Xaba Agent App. Simply download the app, click ‘register now’ on the main page and follow the steps.\n\n<b><u>Employer Registration Steps</u></b>\n\t\ta. Register on www.xaba.org\n\t\tb. Create an account by filling in the Company Registration Form\n\t\tc. Activate your account by clicking link sent to your e-mail address\n\t\td. Log-in to your account\n\t\te. Access the dashboard and add new projects/review reports\n\t\tf. Start shortlisting workers\n\t\tg. Send notification to shortlisted workers\n\t\th. Send job details to workers who’ve responded\n\t\ti. Invite them for job interview\n\t\tj. Hire selected workers</string>
+    <string name="question_content_5">\ta. Registration and receiving notifications on Xaba Shikanisha is free for workers\n\tb. Normal network charges apply.</string>
+    <string name="question_content_6">\t<b>a. On the App:</b>\n\t\tSimply put the activation code sent to your notification number and click ‘verify’ to proceed.</string>
+    <string name="question_content_7">\t<b>a. On USSD:</b>\n\t\ti. Dial *884#\n\t\tii. Enter ID\n\t\tiii. Confirm ID\n\t\tiv. Enter PIN\n\t\tv. Select (1) Update Profile (for either PIN, Location, Language)\n\t<b>b. On the App:</b>\n\t\ti. Login to your account.\n\t\tii. Click the Menu icon\n\t\tiii. Select My Profile\n\t\tiv. Click Edit Profile</string>
+    <string name="question_content_8">\t<b>a. On USSD:</b>\n\t\ti. Dial *884#\n\t\tii. Enter ID\n\t\tiii. Confirm ID\n\t\tiv. Enter PIN\n\t\tv. Choose (2) View Profile on the menu</string>
+    <string name="question_content_9">\t<b>a. On USSD:</b>\n\t\ti. Dial *884#\n\t\tii. Enter ID\n\t\tiii. Confirm ID\n\t\tiv. Enter PIN\n\t\tv. Choose (3) Change Notification Number on the menu</string>
+    <string name="question_content_10">\t<b>a. On USSD:</b>\n\t\ti. Dial *884#\n\t\tii. Enter ID\n\t\tiii. Confirm ID\n\t\tiv. Enter PIN\n\t\tv. Choose (4) Refer a Friend on the menu</string>
+    <string name="question_content_11">\t<b>a. On USSD:</b>\n\t\ti. Dial *884#\n\t\tii. Enter ID\n\t\tiii. Confirm ID\n\t\tiv. Enter PIN\n\t\tv. Choose (5) Add Profession on the menu</string>
+    <string name="question_content_12">
+        \ta. Download the Xaba Agent App on the Google Play Store or Apple App Store\n\tb. Register as an Agent\n\tc. Choose Become Agent on menu\n\td. Enter your details and submit\n\te. If successful, receive a notification to become an agent\n\tf. Start earning your commission.</string>
     <string name="question_content_13">You can find the terms and conditions on our website, www.xaba.org.</string>
     <string name="question_content_14">Xaba Points is a loyalty programme for all Xaba Agents. Each Xaba point is equivalent to KSH 5 upon reaching your target number of registrations.</string>
     <string name="question_content_15">Once you are registered as an agent, you are automatically included into the loyalty programme and can start earning points. The more workers you register, the more you earn.</string>
