change texts, logo in second wizard screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,7 +101,7 @@
     <string name="phone">Phone:</string>
     <string name="genre">Genre:</string>
     <string name="gender">Gender:</string>
-    <string name="county_profile">County of residence:</string>
+    <string name="county_profile">County:</string>
     <string name="sub_county_profile">Sub-County:</string>
 
     <!--Nav Menu-->
