change texts, versionCode and versionName are updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -278,6 +278,6 @@
     <!--errors-->
     <string name="incorrect_pin">Invalid PIN, Please enter the correct PIN</string>
     <string name="invalid_user">Invalid User</string>
-    <string name="kshs_5_for_every_person_you_refer">Kshs 5 for every person you refer.</string>
+    <string name="get_5_KES_for_every_person_you_register">Get 5 KES for every person you register.</string>
 
 </resources>
